feat : 홈페이지 주소변경

--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,8 @@
   <meta property="og:site_name" content="대전 하늘채 스카이앤 3차">
   <meta property="og:type" content="website" />
   <meta property="og:description" content="대전 선화동 하늘채 스카이앤3차ㅣ모델하우스ㅣ하늘채 스카이앤3차ㅣ분양가ㅣ분양일정ㅣ대전 코오롱하늘채 스카이앤 3차" />
-  <meta property="og:image" content="http://www.animezanmai.com/Main1.png" />
-  <meta property="og:url" content="http://www.animezanmai.com/"> 
+  <meta property="og:image" content="http://www.kikaporn.com/Main1.png" />
+  <meta property="og:url" content="http://www.kikaporn.com/"> 
   <meta property="og:locale" content="ko_KR">
 
   
@@ -28,12 +28,12 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="대전 하늘채 스카이앤 3차" />
   <meta name="twitter:description" content="대전 선화동 하늘채 스카이앤3차ㅣ모델하우스ㅣ하늘채 스카이앤3차ㅣ분양가ㅣ분양일정ㅣ대전 코오롱하늘채 스카이앤 3차" />
-  <meta name="twitter:image" content="http://www.animezanmai.com/Main1.png" />
-  <meta name="twitter:url" content="http://www.animezanmai.com/" />
+  <meta name="twitter:image" content="http://www.kikaporn.com/Main1.png" />
+  <meta name="twitter:url" content="http://www.kikaporn.com/" />
 
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.ico" />
-  <link rel="image_src" href="http://www.animezanmai.com/Main1.png" />
+  <link rel="image_src" href="http://www.kikaporn.com/Main1.png" />
   <link rel="rss" type="application/xml" title="rss" href="/rss.xml" />
   <link rel="sitemap" type="application/xml" title="sitemap" href="/sitemap.xml" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -42,7 +42,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Noto+Sans+KR:wght@100..900&family=Roboto:wght@700&display=swap" rel="stylesheet">
 
-  <title>대전 하늘채 스카이앤 3차 </title>
+  <title>대전 하늘채 스카이앤 3차</title>
    
   <!-- Structured Data -->
   <script type="application/ld+json">
@@ -50,9 +50,9 @@
     "@context": "https://schema.org",
     "@type": "RealEstateAgent",
     "name": "대전 하늘채 스카이앤 3차",
-    "url": "http://www.animezanmai.com/",
+    "url": "http://www.kikaporn.com/",
     "description": "대전 하늘채 스카이앤3차 아파트의 최신정보 및 모델하우스위치 정보 및 상담 서비스 제공",
-    "logo": "http://www.animezanmai.com/Main1.png",
+    "logo": "http://www.kikaporn.com/Main1.png",
     "contactPoint": {
       "@type": "ContactPoint",
       "telephone": "+82-1533-8848",
@@ -60,7 +60,7 @@
     },
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "http://www.animezanmai.com/?s={search_term_string}",
+      "target": "http://www.kikaporn.com/?s={search_term_string}",
       "query-input": "required name=search_term_string"
     }
   }
