feat : 메타코드삽입

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
   <meta property="og:description" content="대전 선화동 하늘채 스카이앤3차ㅣ모델하우스ㅣ하늘채 스카이앤3차ㅣ분양가ㅣ분양일정ㅣ대전 코오롱하늘채 스카이앤 3차">
   <meta name="robots" content="index, follow" />
 
+  <meta name="naver-site-verification" content="a2759a3d7185cc86995839658b78094a88de582c" />
+  <meta name="google-site-verification" content="aQhsuarJdqf9zgm2SXRE4IwdFQ_a0gjv99SvbN76Nuo" />
+
   
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.ico" />
   <meta property="og:title" content="대전 하늘채 스카이앤 3차" />
