feat : 인덱스 딥크로션 수정

--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta property="title" content="대전 하늘채 스카이앤 3차" />
-  <meta name="keywords" content="대전하늘늘채스카이, 대전하늘채스카이3차">
-  <meta property="og:description" content="대전 선화동 하늘채 스카이앤3차ㅣ모델하우스ㅣ하늘채 스카이앤3차ㅣ분양가ㅣ분양일정ㅣ대전 코오롱하늘채 스카이앤 3차">
+  <meta name="keywords" content="대전하늘채스카이앤, 대전하늘채스카이3차">
+  <meta property="og:description" content="대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스">
   <meta name="robots" content="index, follow" />
 
   <meta name="naver-site-verification" content="a2759a3d7185cc86995839658b78094a88de582c" />
@@ -21,7 +21,7 @@
   <meta property="og:title" content="대전 하늘채 스카이앤 3차" />
   <meta property="og:site_name" content="대전 하늘채 스카이앤 3차">
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="대전 선화동 하늘채 스카이앤3차ㅣ모델하우스ㅣ하늘채 스카이앤3차ㅣ분양가ㅣ분양일정ㅣ대전 코오롱하늘채 스카이앤 3차" />
+  <meta property="og:description" content="대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스" />
   <meta property="og:image" content="http://www.kikaporn.com/Main1.png" />
   <meta property="og:url" content="http://www.kikaporn.com/"> 
   <meta property="og:locale" content="ko_KR">
@@ -30,7 +30,7 @@
   <!-- Twitter Card Metadata -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="대전 하늘채 스카이앤 3차" />
-  <meta name="twitter:description" content="대전 선화동 하늘채 스카이앤3차ㅣ모델하우스ㅣ하늘채 스카이앤3차ㅣ분양가ㅣ분양일정ㅣ대전 코오롱하늘채 스카이앤 3차" />
+  <meta name="twitter:description" content="대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스" />
   <meta name="twitter:image" content="http://www.kikaporn.com/Main1.png" />
   <meta name="twitter:url" content="http://www.kikaporn.com/" />
 
@@ -73,10 +73,10 @@
 <body>
 
 
-  <noscript>대전 선화동 하늘채 스카이앤3차ㅣ모델하우스ㅣ하늘채 스카이앤3차ㅣ분양가ㅣ분양일정ㅣ대전 코오롱하늘채 스카이앤 3차"></noscript>
+  <noscript>대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스"></noscript>
   <div id="root">
   <h1>대전 하늘채 스카이앤 3차</h1>
-  <p>대전 선화동 하늘채 스카이앤3차ㅣ모델하우스ㅣ하늘채 스카이앤3차ㅣ분양가ㅣ분양일정ㅣ대전 코오롱하늘채 스카이앤 3차"></p>
+  <p>대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스"></p>
     </div>
   <!--
       This HTML file is a template.
