feat : 헬멧코드 수정

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <meta name="theme-color" content="#000000" />
   <meta property="title" content="대전 하늘채 스카이앤 3차" />
   <meta name="description" content="대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스" />
-  <meta name="keywords" content="대전하늘채스카이앤3차, 대전하늘채스카이앤, 대전하늘채스카이앤3차모델하우스," />
+  <meta name="keywords" content="대전하늘채스카이앤3차, 대전하늘채스카이앤, 대전하늘채스카이앤3차모델하우스" />
   <meta name="robots" content="index, follow" />
 
   <meta name="naver-site-verification" content="a2759a3d7185cc86995839658b78094a88de582c" />
