도메인변경경

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
   <meta property="og:site_name" content="대전 하늘채 스카이앤 3차">
   <meta property="og:type" content="website" />
   <meta property="og:description" content="대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스" />
-  <meta property="og:image" content="http://www.kikaporn.com/Main1.png" />
-  <meta property="og:url" content="http://www.kikaporn.com/"> 
+  <meta property="og:image" content="https://buysildenafilv.com/Main1.png" />
+  <meta property="og:url" content="https://buysildenafilv.com/"> 
   <meta property="og:locale" content="ko_KR">
 
   
@@ -31,12 +31,12 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="대전 하늘채 스카이앤 3차" />
   <meta name="twitter:description" content="대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스" />
-  <meta name="twitter:image" content="http://www.kikaporn.com/Main1.png" />
-  <meta name="twitter:url" content="http://www.kikaporn.com/" />
+  <meta name="twitter:image" content="https://buysildenafilv.com/Main1.png" />
+  <meta name="twitter:url" content="https://buysildenafilv.com/" />
 
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.ico" />
-  <link rel="image_src" href="http://www.kikaporn.com/Main1.png" />
+  <link rel="image_src" href="https://buysildenafilv.com/Main1.png" />
   <link rel="rss" type="application/xml" title="rss" href="/rss.xml" />
   <link rel="sitemap" type="application/xml" title="sitemap" href="/sitemap.xml" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -53,9 +53,9 @@
     "@context": "https://schema.org",
     "@type": "RealEstateAgent",
     "name": "대전 하늘채 스카이앤 3차",
-    "url": "http://www.kikaporn.com/",
+    "url": "https://buysildenafilv.com/",
     "description": "대전 하늘채 스카이앤3차 아파트의 최신정보 및 모델하우스위치 정보 및 상담 서비스 제공",
-    "logo": "http://www.kikaporn.com/Main1.png",
+    "logo": "https://buysildenafilv.com/Main1.png",
     "contactPoint": {
       "@type": "ContactPoint",
       "telephone": "+82-1533-8848",
@@ -63,7 +63,7 @@
     },
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "http://www.kikaporn.com/?s={search_term_string}",
+      "target": "https://buysildenafilv.com/?s={search_term_string}",
       "query-input": "required name=search_term_string"
     }
   }
@@ -78,7 +78,7 @@
           "@type": "ListItem",
           "position": 1,
           "item": {
-            "@id": "http://www.kikaporn.com/",
+            "@id": "https://buysildenafilv.com/",
             "name": "홈"
           }
         },
@@ -86,7 +86,7 @@
           "@type": "ListItem",
           "position": 2,
           "item": {
-            "@id": "http://www.kikaporn.com/",
+            "@id": "https://buysildenafilv.com/",
             "name": "대전 하늘채 스카이앤 3차"
           }
         }
