--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta property="title" content="대전 하늘채 스카이앤 3차" />
-  <meta name="description" content="대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스" />
-  <meta name="keywords" content="대전하늘채스카이앤3차, 대전하늘채스카이앤, 대전하늘채스카이앤3차모델하우스" />
+  <meta name="description" content="대전 하늘채 스카이앤 3차｜☎ 1533-8848｜브레인시티수자인 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스" />
+  <meta name="keywords" content="대전하늘채스카이앤3차, 대전하늘채스카이앤3차모델하우스" />
   <meta name="robots" content="index, follow" />
 
   <meta name="naver-site-verification" content="8cfe8a101ab99b120993fceb59369fb1721e4c87" />
@@ -21,22 +21,22 @@
   <meta property="og:title" content="대전 하늘채 스카이앤 3차" />
   <meta property="og:site_name" content="대전 하늘채 스카이앤 3차">
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스" />
-  <meta property="og:image" content="https://buysildenafilv.com/Main1.png" />
-  <meta property="og:url" content="https://buysildenafilv.com/"> 
+  <meta property="og:description" content="대전 하늘채 스카이앤 3차｜☎ 1533-8848｜브레인시티수자인 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스" />
+  <meta property="og:image" content="https://www.baekyangsa.kr/Main1.png" />
+  <meta property="og:url" content="https://www.baekyangsa.kr/"> 
   <meta property="og:locale" content="ko_KR">
 
   
   <!-- Twitter Card Metadata -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="대전 하늘채 스카이앤 3차" />
-  <meta name="twitter:description" content="대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스" />
-  <meta name="twitter:image" content="https://buysildenafilv.com/Main1.png" />
-  <meta name="twitter:url" content="https://buysildenafilv.com/" />
+  <meta name="twitter:description" content="대전 하늘채 스카이앤 3차｜☎ 1533-8848｜브레인시티수자인 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스" />
+  <meta name="twitter:image" content="https://www.baekyangsa.kr/Main1.png" />
+  <meta name="twitter:url" content="https://www.baekyangsa.kr/" />
 
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo512.ico" />
-  <link rel="image_src" href="https://buysildenafilv.com/Main1.png" />
+  <link rel="image_src" href="https://www.baekyangsa.kr/Main1.png" />
   <link rel="rss" type="application/xml" title="rss" href="/rss.xml" />
   <link rel="sitemap" type="application/xml" title="sitemap" href="/sitemap.xml" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -53,9 +53,9 @@
     "@context": "https://schema.org",
     "@type": "RealEstateAgent",
     "name": "대전 하늘채 스카이앤 3차",
-    "url": "https://buysildenafilv.com/",
+    "url": "https://www.baekyangsa.kr/",
     "description": "대전 하늘채 스카이앤3차 아파트의 최신정보 및 모델하우스위치 정보 및 상담 서비스 제공",
-    "logo": "https://buysildenafilv.com/Main1.png",
+    "logo": "https://www.baekyangsa.kr/Main1.png",
     "contactPoint": {
       "@type": "ContactPoint",
       "telephone": "+82-1533-8848",
@@ -63,7 +63,7 @@
     },
     "potentialAction": {
       "@type": "SearchAction",
-      "target": "https://buysildenafilv.com/?s={search_term_string}",
+      "target": "https://www.baekyangsa.kr/?s={search_term_string}",
       "query-input": "required name=search_term_string"
     }
   }
@@ -78,7 +78,7 @@
           "@type": "ListItem",
           "position": 1,
           "item": {
-            "@id": "https://buysildenafilv.com/",
+            "@id": "https://www.baekyangsa.kr/",
             "name": "홈"
           }
         },
@@ -86,7 +86,7 @@
           "@type": "ListItem",
           "position": 2,
           "item": {
-            "@id": "https://buysildenafilv.com/",
+            "@id": "https://www.baekyangsa.kr/",
             "name": "대전 하늘채 스카이앤 3차"
           }
         }
@@ -98,10 +98,10 @@
 <body>
 
 
-  <noscript>대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스"></noscript>
+  <noscript>대전 하늘채 스카이앤 3차｜☎ 1533-8848｜브레인시티수자인 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스"></noscript>
   <div id="root">
   <h1>대전 하늘채 스카이앤 3차</h1>
-  <p>대전 하늘채 스카이앤3차ㅣ대전하늘채스카이앤ㅣ대전하늘채스카이앤모델하우스ㅣ방문예약ㅣ대전 코오롱하늘채 스카이앤 3차 모델하우스"></p>
+  <p>대전 하늘채 스카이앤 3차｜☎ 1533-8848｜브레인시티수자인 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스"></p>
     </div>
   <!--
       This HTML file is a template.
