--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta property="title" content="대전 하늘채 스카이앤 3차" />
-  <meta name="description" content="대전 하늘채 스카이앤 3차｜☎ 1533-8848｜브레인시티수자인 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스" />
+  <meta name="description" content="대전 하늘채 스카이앤 3차｜☎ 1533-8848｜대전 하늘채 스카이앤 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스" />
   <meta name="keywords" content="대전하늘채스카이앤3차, 대전하늘채스카이앤3차모델하우스" />
   <meta name="robots" content="index, follow" />
 
@@ -19,7 +19,7 @@
   <meta property="og:title" content="대전 하늘채 스카이앤 3차" />
   <meta property="og:site_name" content="대전 하늘채 스카이앤 3차">
   <meta property="og:type" content="website" />
-  <meta property="og:description" content="대전 하늘채 스카이앤 3차｜☎ 1533-8848｜브레인시티수자인 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스" />
+  <meta property="og:description" content="대전 하늘채 스카이앤 3차｜☎ 1533-8848｜대전 하늘채 스카이앤 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스" />
   <meta property="og:image" content="https://www.baekyangsa.kr/Main1.png" />
   <meta property="og:url" content="https://www.baekyangsa.kr/"> 
   <meta property="og:locale" content="ko_KR">
@@ -28,7 +28,7 @@
   <!-- Twitter Card Metadata -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="대전 하늘채 스카이앤 3차" />
-  <meta name="twitter:description" content="대전 하늘채 스카이앤 3차｜☎ 1533-8848｜브레인시티수자인 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스" />
+  <meta name="twitter:description" content="대전 하늘채 스카이앤 3차｜☎ 1533-8848｜대전 하늘채 스카이앤 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스" />
   <meta name="twitter:image" content="https://www.baekyangsa.kr/Main1.png" />
   <meta name="twitter:url" content="https://www.baekyangsa.kr/" />
 
@@ -96,10 +96,10 @@
 <body>
 
 
-  <noscript>대전 하늘채 스카이앤 3차｜☎ 1533-8848｜브레인시티수자인 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스"></noscript>
+  <noscript>대전 하늘채 스카이앤 3차｜☎ 1533-8848｜대전 하늘채 스카이앤 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스"></noscript>
   <div id="root">
   <h1>대전 하늘채 스카이앤 3차</h1>
-  <p>대전 하늘채 스카이앤 3차｜☎ 1533-8848｜브레인시티수자인 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스"></p>
+  <p>대전 하늘채 스카이앤 3차｜☎ 1533-8848｜대전 하늘채 스카이앤 모델하우스｜사업개요｜입지안내｜단지안내｜세대안내｜방문예약｜모델하우스"></p>
     </div>
   <!--
       This HTML file is a template.
